blue-> cyan for dates in git log

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -23,4 +23,4 @@
 [log]
     date = relative
 [format]
-    pretty = format:%C(yellow)%h %Cblue%>(12)%ad %Cgreen%<(7)%aN%Cred%d %Creset%s
+    pretty = format:%C(yellow)%h %C(cyan)%>(12)%ad %Cgreen%<(7)%aN%Cred%d %Creset%s
