--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -55,3 +55,6 @@ set-option -g status-attr dim
 # show session name, window & pane number, date and time on right side of status bar
 set -g status-right-length 60
 set -g status-right "#[fg=blue] S:#S W:#I P:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p"
+
+# Latency
+set -s escape-time 0
