--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,12 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind H resize-pane -L 2
+bind J resize-pane -D 2
+bind K resize-pane -U 2
+bind L resize-pane -R 2
+
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
 
@@ -58,3 +64,4 @@ set -g status-right "#[fg=blue] S:#S W:#I P:#P #[fg=yellow]:: %d %b %Y #[fg=gree
 
 # Latency
 set -s escape-time 0
+set-option -g default-command "$SHELL -l"
