Copy paste mappings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,14 @@ set-option -g base-index 1
 setw -g pane-base-index 1
 
 # ----------------------
+# Copy - paste
+# -----------------------
+setw -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'C-v' rectangle-toggle
+bind-key -t vi-copy 'y' copy-pipe "xclip -i -sel p -f | xclip -i -sel c"
+
+# ----------------------
 # set some pretty colors
 # ----------------------
 # set pane colors - hilight the active pane
