--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,16 +4,17 @@ bind C-a send-prefix
 # use UTf-8
 set -g utf8
 set-window-option -g utf8 on
-# Use vim bindings to move
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
 
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+bind h resize-pane -L 5
+bind j resize-pane -D 5
+bind k resize-pane -U 5
+bind l resize-pane -R 5
 
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
@@ -35,6 +36,10 @@ setw -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'C-v' rectangle-toggle
 bind-key -t vi-copy 'y' copy-pipe "xclip -i -sel p -f | xclip -i -sel c"
+
+# Automatically set windows title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
 # ----------------------
 # set some pretty colors
