--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,16 +5,16 @@ bind C-a send-prefix
 set -g utf8
 set-window-option -g utf8 on
 
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+# Use Alt-vim keys without prefix key to resize panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-bind h resize-pane -L 5
-bind j resize-pane -D 5
-bind k resize-pane -U 5
-bind l resize-pane -R 5
+bind -n M-h resize-pane -L 5
+bind -n M-j resize-pane -D 5
+bind -n M-k resize-pane -U 5
+bind -n M-l resize-pane -R 5
 
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
