--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@ bind -n M-k resize-pane -U 5
 bind -n M-l resize-pane -R 5
 
 # make tmux display things in 256 colors
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 # set scrollback history to 10000 (10k)
 set -g history-limit 10000
