--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,7 +18,7 @@ bind -n M-l resize-pane -R 5
 
 # make tmux display things in 256 colors
 set -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',XXX:RGB'
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # set scrollback history to 10000 (10k)
 set -g history-limit 10000
