--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,9 +34,9 @@ setw -g pane-base-index 1
 # Copy - paste
 # -----------------------
 setw -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'C-v' rectangle-toggle
-bind-key -t vi-copy 'y' copy-pipe "xclip -i -sel p -f | xclip -i -sel c"
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'C-v' rectangle-toggle
+#bind-key -t vi-copy 'y' copy-pipe "xclip -i -sel p -f | xclip -i -sel c"
 
 # Automatically set windows title
 set-window-option -g automatic-rename on
@@ -46,18 +46,18 @@ set-option -g set-titles on
 # set some pretty colors
 # ----------------------
 # set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border fg=colour235 #base02
+set-option -g pane-active-border fg=colour240 #base01
 
 # colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set-option -g message bg=black #base02
+set-option -g message fg=brightred #orange
 
 # The panes {
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border bg=colour235
+set -g pane-border fg=colour238
+set -g pane-active-border bg=colour236
+set -g pane-active-border fg=colour51
 
 # ----------------------
 # Status Bar
